Update (Browsers work. But need to reload plugin to show the browser when screen put.)