@@ -1,14 +1,29 @@
 package cn.mingbai.ScreenInMC.Utils;
 
 
+import cn.mingbai.ScreenInMC.Main;
 import cn.mingbai.ScreenInMC.Screen.Screen;
 import org.bukkit.Location;
 import org.bukkit.util.Vector;
+import sun.misc.Unsafe;
 
+import java.awt.event.MouseEvent;
+import java.io.File;
+import java.io.InputStream;
 import java.io.Serializable;
+import java.lang.reflect.Field;
+import java.lang.reflect.Method;
+import java.net.URL;
+import java.net.URLClassLoader;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
 import java.util.Objects;
 
 public class Utils {
+    private static boolean loadedLibrariesLoader = false;
+    private static List<URL> loadedURLs = new ArrayList<>();
+
     public static final byte[] intToByteArray(int value) {
         return new byte[]{
                 (byte) (value >>> 24),
@@ -68,9 +83,224 @@ public class Utils {
         return result;
     }
 
+    public static Unsafe getUnsafe() {
+        try {
+            Field unsafeField = sun.misc.Unsafe.class.getDeclaredField("theUnsafe");
+            unsafeField.setAccessible(true);
+            Unsafe unsafe = (sun.misc.Unsafe) unsafeField.get(null);
+            return unsafe;
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    //    public static void unloadJars(){
+//        ClassLoader loader = Thread.currentThread().getContextClassLoader();
+//        try {
+//            Unsafe unsafe = Utils.getUnsafe();
+//            Field field = URLClassLoader.class.getDeclaredField("ucp");
+//            long offset = unsafe.objectFieldOffset(field);
+//            Object ucp = unsafe.getObject(loader, offset);
+//            field = ucp.getClass().getDeclaredField("unopenedUrls");
+//            offset = unsafe.objectFieldOffset(field);
+//            Collection<URL> unopenedURLs = (Collection<URL>) unsafe.getObject(ucp, offset);
+//            field = ucp.getClass().getDeclaredField("path");
+//            offset = unsafe.objectFieldOffset(field);
+//            Collection<URL> pathURLs = (Collection<URL>) unsafe.getObject(ucp, offset);
+//            for(URL i:loadedURLs) {
+//                unopenedURLs.remove(i);
+//                pathURLs.remove(i);
+//            }
+//            loadedURLs.clear();
+//        } catch (Exception er) {
+//            er.printStackTrace();
+//            throw new RuntimeException("Try to add argument: --illegal-access=permit");
+//        }
+//    }
+    public static void loadLibrariesLoader() {
+        if (!loadedLibrariesLoader) {
+            try {
+                File file = File.createTempFile("screen-in-mc-libraries-loader", ".jar");
+                InputStream stream = Main.class.getResourceAsStream("/lib/LibrariesLoader.jar");
+                FileUtils.streamToFile(stream, file);
+                loadJar(file.toURI().toURL());
+                loadedLibrariesLoader = true;
+            } catch (Exception e) {
+                throw new RuntimeException(e);
+            }
+        }
+    }
+
+    public static void loadJar(URL url) {
+        ClassLoader loader = Thread.currentThread().getContextClassLoader();
+        if (loader instanceof URLClassLoader) {
+            try {
+                Method method = URLClassLoader.class.getDeclaredMethod("addURL");
+                method.setAccessible(true);
+                method.invoke(url);
+            } catch (Throwable e) {
+                try {
+                    Unsafe unsafe = Utils.getUnsafe();
+                    Field field = URLClassLoader.class.getDeclaredField("ucp");
+                    long offset = unsafe.objectFieldOffset(field);
+                    Object ucp = unsafe.getObject(loader, offset);
+                    field = ucp.getClass().getDeclaredField("unopenedUrls");
+                    offset = unsafe.objectFieldOffset(field);
+                    Collection<URL> unopenedURLs = (Collection<URL>) unsafe.getObject(ucp, offset);
+                    field = ucp.getClass().getDeclaredField("path");
+                    offset = unsafe.objectFieldOffset(field);
+                    Collection<URL> pathURLs = (Collection<URL>) unsafe.getObject(ucp, offset);
+                    unopenedURLs.add(url);
+                    pathURLs.add(url);
+                } catch (Exception er) {
+                    er.printStackTrace();
+                    throw new RuntimeException("Try to add argument: --illegal-access=permit");
+                }
+            }
+        } else {
+            throw new RuntimeException("ClassLoader is not URLClassLoader");
+        }
+        loadedURLs.add(url);
+    }
+
+    public static ScreenClickResult getScreenClickAt(Location playerEyeLocation, Location screenLocation, Screen.Facing facing, int screenWidth, int screenHeight, int maxDistance) {
+        if (!playerEyeLocation.getWorld().equals(screenLocation.getWorld()) || screenLocation.distance(playerEyeLocation) > maxDistance) {
+            return new ScreenClickResult();
+        }
+        Vector v1;
+        switch (facing) {
+            case UP:
+                v1 = new Vector(0, 1, 0);
+                break;
+            case DOWN:
+                v1 = new Vector(0, -1, 0);
+                screenLocation.add(0, 1, 0);
+                break;
+            case EAST:
+                v1 = new Vector(1, 0, 0);
+                break;
+            case SOUTH:
+                v1 = new Vector(0, 0, 1);
+                break;
+            case WEST:
+                v1 = new Vector(-1, 0, 0);
+                screenLocation.add(1, 0, 0);
+                break;
+            case NORTH:
+                v1 = new Vector(0, 0, -1);
+                screenLocation.add(0, 0, 1);
+                break;
+            default:
+                v1 = new Vector(0, 0, 0);
+                break;
+        }
+        Vector v2 = screenLocation.toVector();
+        Vector v3 = playerEyeLocation.getDirection();
+        Vector v4 = playerEyeLocation.toVector();
+        double d = (v2.clone().subtract(v4).dot(v1)) / (v3.dot(v1));
+        if (d < 0) {
+            return new ScreenClickResult();
+        }
+        Vector v5 = v3.clone().normalize().multiply(d).add(v4);
+        Location clickedLocation = v5.toLocation(playerEyeLocation.getWorld());
+        double clickedLocationX = clickedLocation.getX();
+        double clickedLocationY = clickedLocation.getY();
+        double clickedLocationZ = clickedLocation.getZ();
+        double screenLocationX = screenLocation.getX();
+        double screenLocationY = screenLocation.getY();
+        double screenLocationZ = screenLocation.getZ();
+        double mouseX;
+        double mouseY;
+        switch (facing) {
+            case UP:
+                if (clickedLocationX < screenLocationX || clickedLocationX > screenLocationX + screenWidth ||
+                        clickedLocationZ < screenLocationZ || clickedLocationZ > screenLocationZ + screenHeight ||
+                        playerEyeLocation.getY() < screenLocationY
+                ) {
+                    return new ScreenClickResult();
+                }
+                mouseX = clickedLocationX - screenLocationX;
+                mouseY = clickedLocationZ - screenLocationZ;
+                break;
+            case DOWN:
+                screenLocationZ++;
+                screenLocation.add(0, -1, 0);
+                if (clickedLocationX < screenLocationX || clickedLocationX > screenLocationX + screenWidth ||
+                        clickedLocationZ < screenLocationZ - screenHeight || clickedLocationZ > screenLocationZ ||
+                        playerEyeLocation.getY() > screenLocationY
+                ) {
+                    return new ScreenClickResult();
+                }
+                mouseX = clickedLocationX - screenLocationX;
+                mouseY = screenLocationZ - clickedLocationZ;
+                break;
+            case EAST:
+                screenLocationY++;
+                screenLocationZ++;
+                if (clickedLocationY < screenLocationY - screenHeight || clickedLocationY > screenLocationY ||
+                        clickedLocationZ < screenLocationZ - screenWidth || clickedLocationZ > screenLocationZ ||
+                        playerEyeLocation.getX() < screenLocationX
+                ) {
+                    return new ScreenClickResult();
+                }
+                mouseX = screenLocationZ - clickedLocationZ;
+                mouseY = screenLocationY - clickedLocationY;
+                break;
+            case SOUTH:
+                screenLocationY++;
+                if (clickedLocationX < screenLocationX || clickedLocationX > screenLocationX + screenWidth ||
+                        clickedLocationY < screenLocationY - screenHeight || clickedLocationY > screenLocationY ||
+                        playerEyeLocation.getZ() < screenLocationZ
+                ) {
+                    return new ScreenClickResult();
+                }
+                mouseX = clickedLocationX - screenLocationX;
+                mouseY = screenLocationY - clickedLocationY;
+                break;
+            case WEST:
+                screenLocationY++;
+                screenLocation.add(-1, 0, 0);
+                if (clickedLocationY < screenLocationY - screenHeight || clickedLocationY > screenLocationY ||
+                        clickedLocationZ < screenLocationZ || clickedLocationZ > screenLocationZ + screenWidth ||
+                        playerEyeLocation.getX() > screenLocationX
+                ) {
+                    return new ScreenClickResult();
+                }
+                mouseX = clickedLocationZ - screenLocationZ;
+                mouseY = screenLocationY - clickedLocationY;
+                break;
+            case NORTH:
+                screenLocationX++;
+                screenLocationY++;
+                screenLocation.add(0, 0, -1);
+                if (clickedLocationX < screenLocationX - screenWidth || clickedLocationX > screenLocationX ||
+                        clickedLocationY < screenLocationY - screenHeight || clickedLocationY > screenLocationY ||
+                        playerEyeLocation.getZ() > screenLocationZ
+                ) {
+                    return new ScreenClickResult();
+                }
+                mouseX = screenLocationX - clickedLocationX;
+                mouseY = screenLocationY - clickedLocationY;
+                break;
+            default:
+                return new ScreenClickResult();
+        }
+        return new ScreenClickResult(true, mouseX, mouseY);
+    }
+
     public enum MouseClickType {
         LEFT,
-        RIGHT
+        RIGHT;
+
+        public int getCode() {
+            switch (this) {
+                case LEFT:
+                    return MouseEvent.BUTTON1;
+                case RIGHT:
+                    return MouseEvent.BUTTON3;
+            }
+            return 0;
+        }
     }
 
     //From javafx.utils.Pair
@@ -165,23 +395,27 @@ public class Utils {
         public boolean equals(Object o) {
             if (this == o) return true;
             if (o instanceof Pair) {
-                Pair pair = (Pair)o;
+                Pair pair = (Pair) o;
                 if (!Objects.equals(key, pair.key)) return false;
                 return Objects.equals(value, pair.value);
             }
             return false;
         }
     }
-    public static class ScreenClickResult{
-        private boolean clicked=false;
-        private double mouseX=-1;
-        private double mouseY=-1;
-        private ScreenClickResult(boolean clicked,double mouseX,double mouseY){
+
+    public static class ScreenClickResult {
+        private boolean clicked = false;
+        private double mouseX = -1;
+        private double mouseY = -1;
+
+        private ScreenClickResult(boolean clicked, double mouseX, double mouseY) {
             this.clicked = clicked;
-            this.mouseX=mouseX;
-            this.mouseY=mouseY;
+            this.mouseX = mouseX;
+            this.mouseY = mouseY;
         }
-        private ScreenClickResult(){}
+
+        private ScreenClickResult() {
+        }
 
         public double getMouseX() {
             return mouseX;
@@ -194,130 +428,6 @@ public class Utils {
         public boolean isClicked() {
             return clicked;
         }
-    }
-    public static ScreenClickResult getScreenClickAt(Location playerEyeLocation,Location screenLocation,Screen.Facing facing,int screenWidth,int screenHeight,int maxDistance){
-        if(!playerEyeLocation.getWorld().equals(screenLocation.getWorld()) || screenLocation.distance(playerEyeLocation)>maxDistance){
-            return new ScreenClickResult();
-        }
-        Vector v1;
-        switch (facing) {
-            case UP:
-                v1 = new Vector(0, 1, 0);
-                break;
-            case DOWN:
-                v1 = new Vector(0, -1, 0);
-                screenLocation.add(0, 1, 0);
-                break;
-            case EAST:
-                v1 = new Vector(1, 0, 0);
-                break;
-            case SOUTH:
-                v1 = new Vector(0, 0, 1);
-                break;
-            case WEST:
-                v1 = new Vector(-1, 0, 0);
-                screenLocation.add(1, 0, 0);
-                break;
-            case NORTH:
-                v1 = new Vector(0, 0, -1);
-                screenLocation.add(0, 0, 1);
-                break;
-            default:
-                v1 = new Vector(0, 0, 0);
-                break;
-        }
-        Vector v2 = screenLocation.toVector();
-        Vector v3 = playerEyeLocation.getDirection();
-        Vector v4 = playerEyeLocation.toVector();
-        double d = (v2.clone().subtract(v4).dot(v1)) / (v3.dot(v1));
-        if (d < 0) {
-            return new ScreenClickResult();
-        }
-        Vector v5 = v3.clone().normalize().multiply(d).add(v4);
-        Location clickedLocation = v5.toLocation(playerEyeLocation.getWorld());
-        double clickedLocationX = clickedLocation.getX();
-        double clickedLocationY = clickedLocation.getY();
-        double clickedLocationZ = clickedLocation.getZ();
-        double screenLocationX = screenLocation.getX();
-        double screenLocationY = screenLocation.getY();
-        double screenLocationZ = screenLocation.getZ();
-        double mouseX;
-        double mouseY;
-                switch (facing) {
-            case UP:
-                if (clickedLocationX < screenLocationX || clickedLocationX > screenLocationX + screenWidth ||
-                        clickedLocationZ < screenLocationZ || clickedLocationZ > screenLocationZ + screenHeight||
-                        playerEyeLocation.getY()<screenLocationY
-                ) {
-                    return new ScreenClickResult();
-                }
-                mouseX = clickedLocationX - screenLocationX;
-                mouseY = clickedLocationZ - screenLocationZ;
-                break;
-            case DOWN:
-                screenLocationZ++;
-                screenLocation.add(0, -1, 0);
-                if (clickedLocationX < screenLocationX || clickedLocationX > screenLocationX + screenWidth ||
-                        clickedLocationZ < screenLocationZ - screenHeight || clickedLocationZ > screenLocationZ||
-                        playerEyeLocation.getY()>screenLocationY
-                ) {
-                    return new ScreenClickResult();
-                }
-                mouseX = clickedLocationX - screenLocationX;
-                mouseY = screenLocationZ - clickedLocationZ;
-                break;
-            case EAST:
-                screenLocationY++;
-                screenLocationZ++;
-                if (clickedLocationY < screenLocationY - screenHeight || clickedLocationY > screenLocationY ||
-                        clickedLocationZ < screenLocationZ - screenWidth || clickedLocationZ > screenLocationZ ||
-                        playerEyeLocation.getX()<screenLocationX
-                ) {
-                    return new ScreenClickResult();
-                }
-                mouseX = screenLocationZ - clickedLocationZ;
-                mouseY = screenLocationY - clickedLocationY;
-                break;
-            case SOUTH:
-                screenLocationY++;
-                if (clickedLocationX < screenLocationX || clickedLocationX > screenLocationX + screenWidth ||
-                        clickedLocationY < screenLocationY - screenHeight || clickedLocationY > screenLocationY||
-                        playerEyeLocation.getZ()<screenLocationZ
-                ) {
-                    return new ScreenClickResult();
-                }
-                mouseX = clickedLocationX - screenLocationX;
-                mouseY = screenLocationY - clickedLocationY;
-                break;
-            case WEST:
-                screenLocationY++;
-                screenLocation.add(-1, 0, 0);
-                if (clickedLocationY < screenLocationY - screenHeight || clickedLocationY > screenLocationY ||
-                        clickedLocationZ < screenLocationZ || clickedLocationZ > screenLocationZ + screenWidth||
-                        playerEyeLocation.getX()>screenLocationX
-                ) {
-                    return new ScreenClickResult();
-                }
-                mouseX = clickedLocationZ - screenLocationZ;
-                mouseY = screenLocationY - clickedLocationY;
-                break;
-            case NORTH:
-                screenLocationX++;
-                screenLocationY++;
-                screenLocation.add(0, 0, -1);
-                if (clickedLocationX < screenLocationX - screenWidth || clickedLocationX > screenLocationX ||
-                        clickedLocationY < screenLocationY - screenHeight || clickedLocationY > screenLocationY||
-                        playerEyeLocation.getZ()>screenLocationZ
-                ) {
-                    return new ScreenClickResult();
-                }
-                mouseX = screenLocationX - clickedLocationX;
-                mouseY = screenLocationY - clickedLocationY;
-                break;
-            default:
-                return new ScreenClickResult();
-        }
-        return new ScreenClickResult(true,mouseX,mouseY);
     }
 }
 
